gcc/testsuite/gdc.test/compilable/imports/test1754a.d
module imports.test1754a;

private void bar()
{
}
