gcc/testsuite/gdc.test/fail_compilation/imports/dip22a.d
module imports.dip22a;

class Klass
{
    private void bar() {}
}

struct Struct
{
    private void bar() {}
}

private void bar() {}

template Template(T)
{
    private void bar() {}
}

private void bar(int) {}
